:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Scopri le novità delle funzionalità di amministrazione di BlueXP : Gestione delle identità e degli accessi (IAM), connettori, credenziali dei provider di servizi cloud e altro ancora.



== 9 giugno 2025



=== Connettore 3.9.53

Questa versione di BlueXP Connector include miglioramenti della sicurezza e correzioni di bug.

Al momento, la versione 3.9.53 è disponibile per la modalità standard e la modalità limitata.



=== Gestione delle identità e degli accessi (IAM, Identity and Access Management) di BlueXP 



==== Autenticazione a più fattori (MFA)

Gli utenti non federati possono ora abilitare l'autenticazione a più fattori (MFA) per i propri account BlueXP, migliorandone la sicurezza. Gli amministratori di BlueXP possono gestire le impostazioni MFA per i propri utenti, reimpostandole o disabilitandole per ciascun utente, se necessario. Questa funzionalità è supportata solo in modalità standard.

link:https://docs.netapp.com/us-en/bluexp-setup-admin/task-user-settings.html#task-user-mfa["Scopri come configurare autonomamente l'autenticazione a più fattori."^] link:https://docs.netapp.com/us-en/bluexp-setup-admin/task-iam-manage-members-permissions.html#manage-mfa["Scopri come gestire l'autenticazione a più fattori per gli utenti."^]



=== Carichi di lavoro

Ora puoi visualizzare ed eliminare le credenziali Amazon FSx for NetApp ONTAP dalla pagina Credenziali in BlueXP.



== 29 maggio 2025



=== Rilascio in modalità privata (3,9.52)

È ora disponibile una nuova versione in modalità privata da scaricare da https://mysupport.netapp.com/site/downloads["Sito di supporto NetApp"^]

La versione 3.9.52 include aggiornamenti ai seguenti componenti e servizi BlueXP.

[cols="3*"]
|===
| Componente o servizio | Versione inclusa in questa release | Cambia dalla precedente versione in modalità privata 

